--- a/client/views/main/modal/modal.html
+++ b/client/views/main/modal/modal.html
@@ -2,5 +2,5 @@
   <div id="trim-compare-close" class="brand-button pull-right">
     <a class="button" ui-sref="main"><i class="fa fa-angle-left"/>&nbsp&nbspClose</a>
   </div>
-  <h3>Here is some modal content</h3>
+  <h3>you have {{routeList.length}} route</h3>
 </div>
