--- a/client/views/main/main.html
+++ b/client/views/main/main.html
@@ -2,7 +2,7 @@
     <h4>hello {{user.name}}</h4>
     <a ui-sref="modal" class="button button-info">Open Modal</a>
     <ul>
-    	<li ng-repeat="route in routeList">{{route.route_NAME}}
+    	<li ng-repeat="route in routes">{{route.route_NAME}}
     	</li>
     </ul>
 </div>
