--- a/client/views/main/modal/modal.html
+++ b/client/views/main/modal/modal.html
@@ -1,6 +1,14 @@
+<!-- /.modal-content -->
 <div class="modal-content">
-  <div id="trim-compare-close" class="brand-button pull-right">
-    <a class="button" ui-sref="main"><i class="fa fa-angle-left"/>&nbsp&nbspClose</a>
+  <div class="modal-header">
+    <a ui-sref="^" class="close" aria-label="Close"><span aria-hidden="true">&times;</span></a>
+    <h4 class="modal-title">Modal title</h4>
   </div>
-  <h3>you have {{routeList.length}} route</h3>
+  <div class="modal-body">
+    <p>You have {{modal.routes.length}} routes&hellip;</p>
+  </div>
+  <div class="modal-footer">
+    <a class="btn btn-default" ui-sref="^">Close</a>
+    <a class="btn btn-primary" ui-sref="^" ng-click="modal.saveChanges()">Save changes</a>
+  </div>
 </div>
